# lab_20

./: CMakeLists.txt  main.c  mainCopy.c  test_10.c  test_9.c
libs/algorithms/: algorithm.c  algorithm.h  convert_float.h  evaluate_expression.h  filter_word.h  get_best_team.h  leave_longest_word.h  matrix_transposition.h  rearrange_numbers.h  remove_true_polynomial.h  transpose_non_symmetric_matrix.h  update_product.h
libs/algorithms/task_laba_20/: 11_auto_completion.h  1_fill_matrix.h  2_game_of_life.h  3_median_filter.h  4_get_domains.h  5_get_submatrix.h  6_generate_sequence_by_pattern.h  7_binary_tree.h  8_rearrange_string.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/unordered_array_set/: unordered_array_set.c
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/vectorVoid/: vectorVoid.c  vectorVoid.h
string/: string_.c  string_.h
string/tasks/: Functions for copying.h  alternation_words_from_strs.h  are_there_any_identical_words.h  change_word_order.h  complement_str.h  counter_palindrome_words.h  find_last_common_word.h  find_preceding_word.h  get_word_before_first_word_with_a.h  get_words_other_than_last_word.h  letters_belong_str.h  lexicographical_str.h  print_reverse_str.h  remove_adjacent_equal_letters.h  remove_non_letters.h  remove_polindrome_words.h  replace_digit_to_space.h  replace_word_to_word.h  reverse_str.h  search functions.h  search_by_first_letters.h  strcmp_.h  strlen_.h
